# whetstone-engine

./: .gitignore  Cargo.toml  QUESTION_GENERATION_QUALITY_REVIEW.md  README.md  mechanisms.jsonl
crates/classroom-core/: Cargo.toml
crates/classroom-core/src/: lib.rs  protocol.rs  room.rs
crates/quiz-server/: Cargo.toml
crates/quiz-server/src/: host.html  join.html  main.rs
src/: anthropic.rs  elo.rs  main.rs  model.rs  moves.rs  oracle.rs  oracle_harness.py  pipeline.rs  render.rs  serve.rs  source.rs  tikz.rs
src/classroom/: host.rs  mod.rs
