[package]
name = "whetstone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "io-std", "io-util", "sync", "process", "net"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-tungstenite = "0.24"
rand = "0.8"
walkdir = "2.5"
classroom-core = { path = "crates/classroom-core" }

[dev-dependencies]
tempfile = "3.13"


[workspace]
members = [".", "crates/classroom-core", "crates/quiz-server"]
