[package]
name = "quiz-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
classroom-core = { path = "../classroom-core" }
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
tokio-tungstenite = "0.24"
uuid = { version = "1.0", features = ["v4"] }
